added swagger + refactor pom

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,9 @@ server:
 adapters:
   docker:
     docker-host: "unix:///var/run/docker.sock"
-    registry-url: "ghcr.io"
-    registry-username: "trodix"
-    registry-token:
-    registry-email: "sebastien.vallet89@gmail.com"
   springactuator:
     actuator-endpoints:
       - "http://localhost:8010/actuator"
+  http:
+    http-endpoints:
+      - "https://google.com"
