--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 	<description>Services Status Monitoring </description>
 	<properties>
 		<java.version>17</java.version>
+		<springdoc.version>2.1.0</springdoc.version>
+		<docker-java.version>3.3.3</docker-java.version>
+		<httpclient5.version>5.2.1</httpclient5.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -23,10 +26,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -36,19 +46,19 @@
 		<dependency>
 			<groupId>com.github.docker-java</groupId>
 			<artifactId>docker-java-core</artifactId>
-			<version>3.3.3</version>
+			<version>${docker-java.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.github.docker-java</groupId>
 			<artifactId>docker-java-transport-httpclient5</artifactId>
-			<version>3.3.3</version>
+			<version>${docker-java.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents.client5</groupId>
 			<artifactId>httpclient5</artifactId>
-			<version>5.2.1</version>
+			<version>${httpclient5.version}</version>
 		</dependency>
 	</dependencies>
 
