added disk usage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,11 @@ adapters:
   http:
     http-endpoints:
       - "https://google.com"
+diskusage:
+  volumes:
+    - "/"
+    - "/boot"
+    - "/tmp"
+    - "/var"
+    - "/opt"
+    - "/home"
